--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
     <div class="offer-slider">
       <div class="slides">
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=800');">
-          <span>FREE DELIVERY on first order!</span>
+          <span>FREE DELIVERY On Order above 50!</span>
         </div>
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1606787366850-de6330127bfc?w=800');">
-          <span>NEW: Chat Point Special Combo - Only ₹149</span>
+          <span>NEW: Chat Point Special Combo - Only ₹200</span>
         </div>
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1513104890138-7c749659a0ae38?w=800');">
-          <span>50% OFF on Pizza Spot - Today Only!</span>
+          <span>Order above 200 Get coco-cola free </span>
         </div>
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=800');">
-          <span>Buy 1 Get 1 FREE at Mister Chef!</span>
+          <span>Buy 1 Get 1 FREE at FLY PIZZA !</span>
         </div>
       </div>
     </div>
