--- a/index.html
+++ b/index.html
@@ -2,21 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  
-  <!-- ZOOM FIXED — NO PINCH ZOOM ON MOBILE -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  
   <title>Chat Point | Food Shops</title>
-
-  <!-- PWA -->
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" type="image/png" />
   <meta name="theme-color" content="#59FF94" />
-
-  <!-- FONTS & ICONS -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
   <style>
     :root {
       --bg: #0e0e0e;
@@ -29,8 +21,6 @@
     }
     *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: "Outfit", sans-serif; background: var(--bg); color: var(--text); min-height: 100vh; overflow-x: hidden; position: relative; }
-
-    /* Floating Icons */
     .floating-icons { position: fixed; inset: 0; pointer-events: none; z-index: -1; overflow: hidden; }
     .icon { position: absolute; font-size: 52px; color: var(--accent); opacity: 0.12; animation: float 12s infinite ease-in-out; }
     .icon:nth-child(1) { top: 10%; left: 5%; animation-duration: 14s; }
@@ -38,14 +28,11 @@
     .icon:nth-child(3) { top: 40%; left: 50%; animation-duration: 16s; }
     .icon:nth-child(4) { top: 80%; left: 20%; animation-duration: 20s; }
     @keyframes float { 0%, 100% { transform: translateY(0) rotate(0deg); } 50% { transform: translateY(-25px) rotate(10deg); } }
-
     header { padding: 16px 20px; background: #111; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 200; border-bottom: 1px solid var(--border); }
     .brand { font-size: 26px; font-weight: 800; }
     .brand span { color: var(--accent); }
     .nav-btn { font-size: 24px; cursor: pointer; padding: 10px; border-radius: 50%; background: #1a1a1a; transition: 0.3s; border: 1px solid var(--border); }
     .nav-btn:hover { background: var(--accent); color: black; }
-
-    /* SIDEBAR */
     .sidebar { position: fixed; top: 0; left: -100%; width: 280px; height: 100%; background: #111; padding: 20px; transition: 0.35s; border-right: 1px solid var(--border); z-index: 300; }
     .sidebar.active { left: 0; }
     .profile-section { padding: 16px; background: #1b1b1b; border-radius: 12px; text-align: center; border: 1px solid var(--border); margin-bottom: 20px; }
@@ -53,92 +40,17 @@
     .sidebar a:hover { background: var(--accent); color: black; }
     .overlay { position: fixed; inset: 0; background: rgba(0, 0, 0, 0.55); display: none; z-index: 250; }
     .overlay.active { display: block; }
-
     main { padding: 20px; }
-
-    /* OFFER SLIDER */
-    .offer-slider {
-      max-width: 540px;
-      margin: 0 auto 24px;
-      border-radius: 18px;
-      overflow: hidden;
-      position: relative;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.6);
-      border: 1px solid var(--border);
-    }
-    .slides {
-      display: flex;
-      width: 400%;
-      animation: slide 16s infinite;
-    }
-    .slide {
-      width: 100%;
-      height: 180px;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-weight: 800;
-      font-size: 24px;
-      text-shadow: 0 2px 10px rgba(0,0,0,0.8);
-    }
-    .slide::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(135deg, rgba(89,255,148,0.4), rgba(255,50,99,0.5));
-    }
-    .slide span {
-      position: relative;
-      z-index: 2;
-      background: rgba(0,0,0,0.5);
-      padding: 12px 24px;
-      border-radius: 16px;
-      backdrop-filter: blur(5px);
-    }
-    @keyframes slide {
-      0%, 22% { transform: translateX(0%); }
-      25%, 47% { transform: translateX(-25%); }
-      50%, 72% { transform: translateX(-50%); }
-      75%, 97% { transform: translateX(-75%); }
-      100% { transform: translateX(0%); }
-    }
-
-    /* SEARCH BAR */
-    .search-bar {
-      max-width: 540px;
-      margin: 0 auto 26px;
-      position: relative;
-    }
-    .search-bar input {
-      width: 100%;
-      padding: 16px 50px 16px 20px;
-      border: 1px solid var(--border);
-      border-radius: 50px;
-      background: #1a1a1a;
-      color: var(--text);
-      font-size: 16px;
-    }
-    .search-bar input:focus {
-      outline: none;
-      border-color: var(--accent);
-      box-shadow: 0 0 15px var(--glow);
-    }
-    .search-bar i {
-      position: absolute;
-      right: 18px;
-      top: 50%;
-      transform: translateY(-50%);
-      color: var(--accent);
-      font-size: 18px;
-      pointer-events: none;
-    }
-
+    .offer-slider { max-width: 540px; margin: 0 auto 24px; border-radius: 18px; overflow: hidden; position: relative; box-shadow: 0 8px 25px rgba(0,0,0,0.6); border: 1px solid var(--border); }
+    .slides { display: flex; width: 400%; animation: slide 16s infinite; }
+    .slide { width: 100%; height: 180px; background-size: cover; background-position: center; position: relative; display: flex; align-items: center; justify-content: center; color: white; text-align: center; padding: 20px; font-weight: 800; font-size: 24px; text-shadow: 0 2px 10px rgba(0,0,0,0.8); }
+    .slide::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(89,255,148,0.4), rgba(255,50,99,0.5)); }
+    .slide span { position: relative; z-index: 2; background: rgba(0,0,0,0.5); padding: 12px 24px; border-radius: 16px; backdrop-filter: blur(5px); }
+    @keyframes slide { 0%,22%{transform:translateX(0%)} 25%,47%{transform:translateX(-25%)} 50%,72%{transform:translateX(-50%)} 75%,97%{transform:translateX(-75%)} 100%{transform:translateX(0%)} }
+    .search-bar { max-width: 540px; margin: 0 auto 26px; position: relative; }
+    .search-bar input { width: 100%; padding: 16px 50px 16px 20px; border: 1px solid var(--border); border-radius: 50px; background: #1a1a1a; color: var(--text); font-size: 16px; }
+    .search-bar input:focus { outline:none; border-color:var(--accent); box-shadow:0 0 15px var(--glow); }
+    .search-bar i { position: absolute; right: 18px; top: 50%; transform: translateY(-50%); color: var(--accent); font-size: 18px; pointer-events: none; }
     .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; }
     .card { background: var(--card); border-radius: var(--radius); border: 1px solid var(--border); overflow: hidden; cursor: pointer; transition: 0.4s; }
     .card:hover { transform: translateY(-8px); box-shadow: 0 0 25px var(--glow); }
@@ -151,19 +63,16 @@
   </style>
 </head>
 <body>
-
   <div class="floating-icons">
     <i class="fas fa-pizza-slice icon"></i>
     <i class="fas fa-hamburger icon"></i>
     <i class="fas fa-ice-cream icon"></i>
     <i class="fas fa-mug-hot icon"></i>
   </div>
-
   <header>
     <div class="nav-btn" id="navBtn"><i class="fas fa-bars"></i></div>
     <div class="brand"><span>Chat</span>Point</div>
   </header>
-
   <div class="sidebar" id="sidebar">
     <div class="profile-section" id="profileSection"></div>
     <a href="orders.html">My Orders</a>
@@ -171,36 +80,21 @@
     <a href="#" id="logout" style="display:none;color:#ff6b6b">Logout</a>
   </div>
   <div class="overlay" id="overlay"></div>
-
   <main>
-
-    <!-- OFFERS & PROMO SLIDER -->
     <div class="offer-slider">
       <div class="slides">
-        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=800');">
-          <span>FREE DELIVERY On Order above 50!</span>
-        </div>
-        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1606787366850-de6330127bfc?w=800');">
-          <span>NEW: Chat Point Special Combo - Only ₹200</span>
-        </div>
-        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1513104890138-7c749659a0ae38?w=800');">
-          <span>Order above 200 Get coco-cola free</span>
-        </div>
-        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=800');">
-          <span>Buy 1 Get 1 FREE at FLY PIZZA !</span>
-        </div>
+        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=800');"><span>FREE DELIVERY On Order above 50!</span></div>
+        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1606787366850-de6330127bfc?w=800');"><span>NEW: Chat Point Special Combo - Only ₹200</span></div>
+        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1513104890138-7c749659a0ae38?w=800');"><span>Order above 200 Get coco-cola free</span></div>
+        <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=800');"><span>Buy 1 Get 1 FREE at FLY PIZZA !</span></div>
       </div>
     </div>
-
-    <!-- Search Bar -->
     <div class="search-bar">
       <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()">
       <i class="fas fa-search"></i>
     </div>
-
     <div class="grid" id="grid"></div>
   </main>
-
   <footer>© 2025 Chat Point • Made with Passion</footer>
 
   <script>
@@ -211,7 +105,8 @@
       { name: "Pizza spot", img: "https://images.unsplash.com/photo-1513104890138-7c749659a0ae38?w=500", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita", "Pepperoni", "Veggie Supreme", "BBQ Chicken"] },
       { name: "Fly Pizza", img: "https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=500", rating: 4.6, desc: "100% veg pizzas, light & tasty.", items: ["Paneer Tikka", "Corn & Cheese", "Farmhouse", "Veg Extravaganza"] },
       { name: "Mister Chef", img: "mister-chef.png", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"] },
-      { name: "Bekary", img: "images/Bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
+      { name: "Bekary", img: "images/bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
+      // ← ONLY THIS LINE CHANGED: "Bekary.png" → "bekary.png"
     ];
 
     function renderShops(filter = "") {
@@ -242,7 +137,6 @@
       renderShops(document.getElementById("searchInput").value.trim());
     }
 
-    // Sidebar
     document.getElementById("navBtn").onclick = () => {
       document.getElementById("sidebar").classList.add("active");
       document.getElementById("overlay").classList.add("active");
@@ -273,3 +167,9 @@
   </script>
 </body>
 </html>
+
+
+
+
+
+
