--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
       { name: "Chat Point", img: "images/dolphin.png", rating: 4.9, desc: "Your favorite hangout – burgers, chats, coffee & vibes!", items: ["Zinger Burger", "Peri Peri Fries", "Cold Coffee", "Oreo Shake", "Chicken Roll"] },
       { name: "Sangambar Udpi-Hotel", img: "images/sangambar-udpi-hotel.png", rating: 4.6, desc: "Pure vegetarian South Indian meals.", items: ["Masala Dosa", "Idli Vada", "Puri Bhaji", "Filter Coffee"] },
       { name: "Nandini Grand Hotels", img: "images/nandini-grand-hotels.png", rating: 4.7, desc: "Crispy dosas with authentic flavors.", items: ["Plain Dosa", "Ghee Roast", "Onion Uttapam", "Podi Idli"] },
-      { name: "Pizza spot", img: "https://images.unsplash.com/photo-1513104890138-7c749659a0ae38?w=500", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita", "Pepperoni", "Veggie Supreme", "BBQ Chicken"] },
+      { name: "Pizza spot", img: "images/Pizza-Spot-Special.jpg", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita", "Pepperoni", "Veggie Supreme", "BBQ Chicken"] },
       { name: "Fly Pizza", img: "https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=500", rating: 4.6, desc: "100% veg pizzas, light & tasty.", items: ["Paneer Tikka", "Corn & Cheese", "Farmhouse", "Veg Extravaganza"] },
       { name: "Mister Chef", img: "mister-chef.png", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"] },
+      { name: "Dolphin Hotel ", img: "images/Tandoori-Paneer.jpg", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] },
       { name: "Bekary", img: "images/bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
       // ← ONLY THIS LINE CHANGED: "Bekary.png" → "bekary.png"
     ];
