--- a/items.html
+++ b/items.html
@@ -313,10 +313,139 @@
         { name: "Classic Burger", price: 120 },
         { name: "French Fries", price: 99 }
       ],
-      "Bekary": [
-        { name: "Veg Pizza", price: 170 },
-        { name: "Margherita Pizza", price: 160 }
-      ],
+      "Dolphin Hotel":[
+  { name: "Chicken Tandoori", price: 305 },
+
+  { name: "Kantilal Rice", price: 155 },
+  { name: "Sizwan Fried Rice", price: 165 },
+  { name: "Panner Fried Rice", price: 185 },
+  { name: "Mix Raita", price: 105 },
+  { name: "Bundhi Raita", price: 105 },
+  { name: "Painapal Raita", price: 110 },
+  { name: "Veg Raita", price: 105 },
+
+  { name: "Panner Butter Masala", price: 185 },
+  { name: "Panner Masala", price: 165 },
+  { name: "Panner Tikka Masala", price: 205 },
+  { name: "Panner Kadai", price: 165 },
+  { name: "Panner Kheema", price: 205 },
+  { name: "Panner Kolhapuri", price: 165 },
+  { name: "Panner Sai Kurma", price: 205 },
+  { name: "Panner Kofta", price: 215 },
+  { name: "Panner Hyadrabadi", price: 225 },
+  { name: "Panner Guchi", price: 225 },
+  { name: "Panner Burji", price: 205 },
+  { name: "Palak Panner", price: 165 },
+  { name: "Panner Peshwari", price: 205 },
+  { name: "Plain Palak", price: 145 },
+
+  { name: "Veg Kadai", price: 175 },
+  { name: "Veg Sai Kurma", price: 175 },
+  { name: "Veg Dopyaza", price: 175 },
+  { name: "Veg Makhanwala", price: 175 },
+  { name: "Veg Maharaja", price: 175 },
+  { name: "Veg Rangeela", price: 175 },
+  { name: "Veg Boona", price: 175 },
+  { name: "Veg Tiranga", price: 175 },
+  { name: "Veg Dolphin Special", price: 215 },
+  { name: "Veg Tawa Masala", price: 175 },
+  { name: "Veg Kolhapuri", price: 175 },
+  { name: "Veg Patiyala", price: 175 },
+  { name: "Veg Jaipuri", price: 175 },
+  { name: "Veg Dilruba", price: 175 },
+  { name: "Veg NR Kurma", price: 175 },
+  { name: "Veg Hyadrabadi", price: 175 },
+
+  { name: "Veg Kofta", price: 205 },
+  { name: "Veg Hariyali", price: 215 },
+  { name: "Veg Lajawab", price: 225 },
+  { name: "Veg Pahadi Masala", price: 225 },
+  { name: "Nix Veg", price: 165 },
+  { name: "Veg Paper Masala", price: 165 },
+  { name: "Matki Fry", price: 145 },
+  { name: "Malai Kofta", price: 205 },
+  { name: "Baigan Masala", price: 155 },
+  { name: "Aalu Mutter", price: 155 },
+  { name: "Aalu Gobi Masala", price: 155 },
+  { name: "Dum Aalu Kashmiri", price: 165 },
+  },
+  { name: "Green Pice Masala", price: 165 },
+  { name: "Capsicum Masala", price: 155 },
+  { name: "Shenga Bhaji", price: 155 },
+  { name: "Methi Masala", price: 145 },
+  { name: "Menthi Sukka", price: 155 },
+  { name: "Bhendy Fry", price: 155 },
+  { name: "Bhendy Masala", price: 155 },
+  { name: "Tomato Fry", price: 145 },
+  { name: "Special Gravy", price: 125 },
+  { name: "Curd", price: 50 },
+  { name: "Shenga Chatni", price: 55 },
+  { name: "Garlic Fry", price: 105 },
+
+  { name: "Tandoori Roti", price: 45 },
+  { name: "Special Tandoori Roti", price:55 },
+  { name: "Butter Roti", price:50 },
+  { name: "Butter Kulcha", price:55 },
+  { name: "Butter Naan", price:60 },
+  { name: "Plane Naan", price:50 },
+  { name: "Plane Kulcha", price:50 },
+  { name: "Garlic Naan", price:65 },
+  { name: "Jawari Roti", price:40 },
+  { name: "Chapati", price:39 },
+  { name: "Rost Roti", price:40 },
+  { name: "Tawa Parota", price:55 },
+  { name: "Masala Parota", price:100 },
+  { name: "Aalu Parota", price:90 },
+  { name: "Aalu Butter Parota", price:110 },
+
+  { name: "Plane Rice Full", price:100 },
+  { name: "Plane Rice Half", price:70 },
+  { name: "Jeera Rice Full", price:155 },
+  { name: "Jeera Rice Half", price:95 },
+  { name: "Masala Rice Full", price:95 },
+  { name: "Masala Rice Half", price:95 },
+  { name: "Steem Rice", price:120 },
+  { name: "Ghee Rice", price:120 },
+  { name: "Veg Rice", price:120 },
+  { name: "Veg Fried Rice", price:165 },
+  { name: "Onion Fried Rice", price:165 },
+  { name: "Dal Khichadi", price:165 },
+  { name: "Palak Rice", price:185 },
+  { name: "Veg Biriyani", price:185 },
+  { name: "Cord Rice", price:165 },
+
+  { name: "Tomato Soup", price:110 },
+  { name: "Veg Clear Soup", price:110 },
+  { name: "Hot and Sour Soup", price:110 },
+  { name: "Veg Manchow Soup", price:135 },
+  { name: "Sweet Corn Soup", price:110 },
+  { name: "Mushroom Soup", price:135 },
+  { name: "Veg Noodles Soup", price:135 },
+
+  { name: "Papad", price:50 },
+  { name: "Masala Papad", price:65 },
+  { name: "Finger Chips", price:130 },
+  { name: "Finger Veg", price:135 },
+  { name: "Veg Manchurian", price:135 },
+  { name: "Veg 65", price:135 },
+  { name: "Kaju Dry", price:145 },
+  { name: "Gobi 65", price:135 },
+  { name: "Gobi Manchurian", price:135 },
+  { name: "Gobi Chilly", price:135 },
+  { name: "Panner Chilly", price:235 },
+  { name: "Panner 65", price:215 },
+  { name: "Panner Pakoda", price:180 },
+  { name: "Panner French", price:235 },
+  { name: "Panner Golden", price:235 },
+  { name: "Panner Sati", price:305 },
+  { name: "Veg Spring Roll", price:135 },
+  { name: "Veg Sangli Roll", price:135 },
+  { name: "Veg Harabara Kabab", price:215 },
+  { name: "Veg Pakoda", price:205 },
+  { name: "Onion Pakoda", price:135 },
+  { name: "Onion Ring Pakoda", price:135 },
+  { name: "Palak Pakoda", price:135 }
+],
 
       // ============ YOUR BAKERY ADDED HERE ============
       "Chat Point Bakery": [
