--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       { name: "Pizza spot", img: "images/Pizza-Spot-Special.jpg", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita", "Pepperoni", "Veggie Supreme", "BBQ Chicken"] },
       { name: "Fly Pizza", img: "https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=500", rating: 4.6, desc: "100% veg pizzas, light & tasty.", items: ["Paneer Tikka", "Corn & Cheese", "Farmhouse", "Veg Extravaganza"] },
       { name: "Mister Chef", img: "mister-chef.png", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"] },
-      { name: "Dolphin Hotel ", img: "images/Tandoori-Paneer.jpg", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] },
-      { name: "Bekary", img: "images/bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
+      { name: "Dolphin Hotel", img: "images/Tandoori-Paneer.jpg", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] },
+      { name: "Hassanmba iyyangar bakery", img: "images/bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
       // ← ONLY THIS LINE CHANGED: "Bekary.png" → "bekary.png"
     ];
 
