--- a/items.html
+++ b/items.html
@@ -261,7 +261,7 @@
         { name: "Mysore Masala Dosa", price: 115 },
         { name: "Paneer Masala Dosa", price: 115 }
       ],
-      "Nandini Grand Hotels": [
+      "Nandi Grand Hotels": [
         { name: "Shira", price: 35 },
         { name: "Poori", price: 70 },
         { name: "Full Meals", price: 95 },
@@ -313,7 +313,7 @@
         { name: "Classic Burger", price: 120 },
         { name: "French Fries", price: 99 }
       ],
-      "Dolphin Hotel":[
+      "Dolphin Hotel": [
   { name: "Chicken Tandoori", price: 305 },
 
   { name: "Kantilal Rice", price: 155 },
@@ -368,7 +368,7 @@
   { name: "Aalu Mutter", price: 155 },
   { name: "Aalu Gobi Masala", price: 155 },
   { name: "Dum Aalu Kashmiri", price: 165 },
-  },
+  
   { name: "Green Pice Masala", price: 165 },
   { name: "Capsicum Masala", price: 155 },
   { name: "Shenga Bhaji", price: 155 },
@@ -448,35 +448,35 @@
 ],
 
       // ============ YOUR BAKERY ADDED HERE ============
-      "Chat Point Bakery": [
+      "Hassanmba iyyangar bakery ": [
         // Pizzas
-        { name: "Veg Pizza", price: 150 },
-        { name: "Margherita", price: 140 },
-        { name: "Paneer Pizza", price: 200 },
-        { name: "Golden Corn Pizza", price: 209 },
-        { name: "Sweet Corn Pizza", price: 200 },
-        { name: "Baby Corn Pizza", price: 200 },
+        { name: "Veg Pizza", price: 170 },
+        { name: "Margherita", price: 150 },
+        { name: "Paneer Pizza", price: 220 },
+        { name: "Golden Corn Pizza", price: 230 },
+        { name: "Sweet Corn Pizza", price: 220 },
+        { name: "Baby Corn Pizza", price: 220 },
         // Burgers
-        { name: "Classic Veg Burger", price: 60 },
-        { name: "Cheese Burger", price: 70 },
-        { name: "Paneer Tandoori Burger", price: 70 },
+        { name: "Classic Veg Burger", price: 70 },
+        { name: "Cheese Burger", price: 80 },
+        { name: "Paneer Tandoori Burger", price: 80 },
         // Sandwiches & Rolls
-        { name: "Cheese Sandwich", price: 60 },
-        { name: "Veg Sandwich", price: 50 },
-        { name: "Veg Roll", price: 30 },
-        { name: "Egg Roll", price: 30 },
-        { name: "Cheese Roll", price: 35 },
+        { name: "Cheese Sandwich", price: 70 },
+        { name: "Veg Sandwich", price: 60 },
+        { name: "Veg Roll", price: 35 },
+        { name: "Egg Roll", price: 35 },
+        { name: "Cheese Roll", price: 40 },
         // Ice Cakes (per kg)
-        { name: "Rasmalai Cake", price: 700 },
-        { name: "Irish Coffee Cake", price: 700 },
-        { name: "Black Forest Cake", price: 600 },
-        { name: "American Nuts Cake", price: 700 },
-        { name: "French Vanilla Cake", price: 650 },
-        { name: "Pineapple Cake", price: 600 },
-        { name: "Strawberry Cake", price: 600 },
-        { name: "Death by Chocolate Cake", price: 650 },
-        { name: "Butterscotch Cake", price: 600 },
-        { name: "Mango Cake", price: 600 }
+        { name: "Rasmalai Cake", price: 750 },
+        { name: "Irish Coffee Cake", price: 750 },
+        { name: "Black Forest Cake", price: 650 },
+        { name: "American Nuts Cake", price: 750 },
+        { name: "French Vanilla Cake", price: 700 },
+        { name: "Pineapple Cake", price: 650 },
+        { name: "Strawberry Cake", price: 650 },
+        { name: "Death by Chocolate Cake", price: 700 },
+        { name: "Butterscotch Cake", price: 650 },
+        { name: "Mango Cake", price: 650 }
       ]
       // ================================================
     };
